Semantic-Analysis/AssignmentTwo.java
/* AssignmentTwo.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. AssignmentTwo.java */
 import java.io.*;
 import java.util.*;

 // Main class for passing in CAL code.
 class AssignmentTwo/*@bgen(jjtree)*/implements AssignmentTwoTreeConstants, AssignmentTwoConstants {/*@bgen(jjtree)*/
  protected static JJTAssignmentTwoState jjtree = new JJTAssignmentTwoState();
  public static STC ST = new STC();
  public static String scope = "global";

  public static void main(String[] args) throws FileNotFoundException {

   if(args.length < 1) {
    System.out.println("Please pass in the filename.");
    System.exit(1);
   }

   try {
    // parser initialisation
    AssignmentTwo parser = new AssignmentTwo(new FileInputStream(args[0]));

    // Build our Abstract Syntax tree (AST)
    SimpleNode root = parser.program();
    System.out.println("Abstract Syntax Tree:");
    root.dump(" ");

    // Output the symbol table of the program based off the input
    System.out.println();
    System.out.println("Symbol Table:\n");
    ST.print();

    // Perform Type checking & Semantic Analysis on the program.
    // If an error/warning is found, it will be reported in the terminal.
    System.out.println();
    System.out.println("Type Checking...");
    TypeCheckVisitor tc = new TypeCheckVisitor();
    root.jjtAccept(tc, ST);

    /* Perform IR representation conversion
				 * Goal: Traverse the AST and generate appropriate IR
				 * code from each node.
				 * Output will be stored in .ir files
				 * Output filename will be generated from input .cal file passed
				 * in via the command line.
				 * We will be using 3-address code.
				 */
    String fileName = args[0].substring(0, args[0].indexOf(".")) + ".ir";
    System.out.println("\n----------------------------------------");
    System.out.println("Intermediate Representation Generation: ");
    System.out.println("IR code will be generated into: \'" + fileName);

    try {
     PrintStream outputStream = new PrintStream(new FileOutputStream(fileName));
     // Reassign standard input stream to the .ir file
     System.setOut(outputStream);
    }
    catch (FileNotFoundException e) {
     System.out.println("File Not Found for parsing");
    }

    // Begin traversal
    try {
     IrCodeGenerator irGen = new IrCodeGenerator();
     root.jjtAccept(irGen, null);
    } catch (Exception e) {
     System.err.println("IR code generation finished");
    }

   } catch (ParseException e) {
    e.printStackTrace();
   }
  }

// Start production rule.
// 0 or 1 declaration lists, followed by
// 0 or 1 function lists, followed by
// our main function.
  static final public SimpleNode program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VARIABLE:
      case CONSTANT:{
        DeclarationList();
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INTEGER:
      case BOOLEAN:
      case VOID:{
        FunctionList();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        ;
      }
      Main();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
    throw new Error("Missing return statement in function");
}

/* Declaration Rules */
// A declaration list has one or more declarations.
  static final public void DeclarationList() throws ParseException {
    label_1:
    while (true) {
      Declaration();
      jj_consume_token(SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VARIABLE:
      case CONSTANT:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
}

/* A declaration is comprised of either:
 * 1) A Variable declaration
 * 2) A Constant declaration
 */
  static final public void Declaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VARIABLE:{
      VariableDeclaration();
      break;
      }
    case CONSTANT:{
      ConstantDeclaration();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

// Variable structure construct
  static final public void VariableDeclaration() throws ParseException {/*@bgen(jjtree) VarDecl */
                                      ASTVarDecl jjtn000 = new ASTVarDecl(JJTVARDECL);
                                      boolean jjtc000 = true;
                                      jjtree.openNodeScope(jjtn000);Token t; String ID; String type;
    try {
      t = jj_consume_token(VARIABLE);
      ID = Identifier();
      jj_consume_token(COLON);
      type = Type();
jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
jjtn000.value = t.image;
  ST.put(ID, type, "var", scope);
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

// Constant structure construct
  static final public void ConstantDeclaration() throws ParseException {/*@bgen(jjtree) ConstDecl */
 ASTConstDecl jjtn000 = new ASTConstDecl(JJTCONSTDECL);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t; String ID; String type;
    try {
      t = jj_consume_token(CONSTANT);
      ID = Identifier();
      jj_consume_token(COLON);
      type = Type();
      jj_consume_token(ASSIGNMENT);
      expression();
jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
jjtn000.value = t.image;
  ST.put(ID, type, "const", scope);
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

/* Function Rules */
// A function_list has one or more functions
  static final public void FunctionList() throws ParseException {
ASTFunction jjtn001 = new ASTFunction(JJTFUNCTION);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
    try {
      function();
    } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER:
    case BOOLEAN:
    case VOID:{
      FunctionList();
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
}

// Function definition
// Takes a parameter list with 0 or more parameters.
// Takes 0 or 1 declaration lists.
// Within the function begin, we define a statement block 0 or 1 times.
// Return 0 or 1 expressions. 
  static final public void function() throws ParseException {String type; String ID;
    type = Type();
    ID = Identifier();
ST.put(ID, type, "function", scope);
  if(!scope.equals("global")) {
   // Add function name to the global score LinkedList.
         ST.put(ID, type, "function", "global");
        }
  // Set new scope here for function.
      scope = ID;
    jj_consume_token(LBRACE);
    parameter_list();
    jj_consume_token(RBRACE);
    jj_consume_token(IS);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VARIABLE:
    case CONSTANT:{
      DeclarationList();
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(BEGIN);
    statement_block();
ASTReturnValue jjtn001 = new ASTReturnValue(JJTRETURNVALUE);
       boolean jjtc001 = true;
       jjtree.openNodeScope(jjtn001);
    try {
      function_return();
    } catch (Throwable jjte001) {
if (jjtc001) {
         jjtree.clearNodeScope(jjtn001);
         jjtc001 = false;
       } else {
         jjtree.popNode();
       }
       if (jjte001 instanceof RuntimeException) {
         {if (true) throw (RuntimeException)jjte001;}
       }
       if (jjte001 instanceof ParseException) {
         {if (true) throw (ParseException)jjte001;}
       }
       {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
         jjtree.closeNodeScope(jjtn001, true);
       }
    }
    jj_consume_token(END);
scope = "global";
}

  static final public void function_return() throws ParseException {Token t;
    jj_consume_token(RETURN);
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:
    case MINUS:
    case TRUE:
    case FALSE:
    case DIGIT:
    case ID:{
      expression();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
    jj_consume_token(SEMICOLON);
}

// Defines parameter list.
// Either is a non-empty parameter list or an empty one (0 or 1)
  static final public void parameter_list() throws ParseException {/*@bgen(jjtree) Parameter_list */
  ASTParameter_list jjtn000 = new ASTParameter_list(JJTPARAMETER_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
ASTParameter jjtn001 = new ASTParameter(JJTPARAMETER);
    boolean jjtc001 = true;
    jjtree.openNodeScope(jjtn001);
        try {
          nemp_parameter_list();
        } catch (Throwable jjte001) {
if (jjtc001) {
      jjtree.clearNodeScope(jjtn001);
      jjtc001 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte001 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte001;}
    }
    if (jjte001 instanceof ParseException) {
      {if (true) throw (ParseException)jjte001;}
    }
    {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
      jjtree.closeNodeScope(jjtn001, true);
    }
        }
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

// Non-empty parameter list structure.
  static final public void nemp_parameter_list() throws ParseException {String ID; String type;
    ID = Identifier();
    jj_consume_token(COLON);
    type = Type();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMMA:{
      jj_consume_token(COMMA);
ASTParameter jjtn001 = new ASTParameter(JJTPARAMETER);
                                                    boolean jjtc001 = true;
                                                    jjtree.openNodeScope(jjtn001);
      try {
        nemp_parameter_list();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                                      jjtree.clearNodeScope(jjtn001);
                                                      jjtc001 = false;
                                                    } else {
                                                      jjtree.popNode();
                                                    }
                                                    if (jjte001 instanceof RuntimeException) {
                                                      {if (true) throw (RuntimeException)jjte001;}
                                                    }
                                                    if (jjte001 instanceof ParseException) {
                                                      {if (true) throw (ParseException)jjte001;}
                                                    }
                                                    {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                                      jjtree.closeNodeScope(jjtn001, true);
                                                    }
      }
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
ST.put(ID, type, "parameter", scope);
}

// A statement block is simply 0 or more statements.
  static final public void statement_block() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case ELSE:
      case WHILE:
      case BEGIN:
      case SKIP_TOKEN:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_2;
      }
      statement();
    }
}

// Statement structure - has many possible routes.
// Skip token is used to skip the expection of anything else inside statement.
  static final public void statement() throws ParseException {/*@bgen(jjtree) Statement */
 ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        Identifier();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGNMENT:{
          jj_consume_token(ASSIGNMENT);
          expression();
ASTAssignment jjtn001 = new ASTAssignment(JJTASSIGNMENT);
                                           boolean jjtc001 = true;
                                           jjtree.openNodeScope(jjtn001);
          try {
            jj_consume_token(SEMICOLON);
          } finally {
if (jjtc001) {
                                             jjtree.closeNodeScope(jjtn001, true);
                                           }
          }
          break;
          }
        case LBRACE:{
          jj_consume_token(LBRACE);
          arg_list();
          jj_consume_token(RBRACE);
          jj_consume_token(SEMICOLON);
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      case BEGIN:{
        statement_begin_structure();
        break;
        }
      case IF:{
        t = jj_consume_token(IF);
        condition();
        statement_begin_structure();
jjtree.closeNodeScope(jjtn000, true);
                                                        jjtc000 = false;
jjtn000.value = t.image;
        break;
        }
      case ELSE:{
        t = jj_consume_token(ELSE);
        statement_begin_structure();
jjtree.closeNodeScope(jjtn000, true);
                                              jjtc000 = false;
jjtn000.value = t.image;
        break;
        }
      case WHILE:{
        t = jj_consume_token(WHILE);
        condition();
        statement_begin_structure();
jjtree.closeNodeScope(jjtn000, true);
                                                           jjtc000 = false;
jjtn000.value = t.image;
        break;
        }
      case SKIP_TOKEN:{
        jj_consume_token(SKIP_TOKEN);
        jj_consume_token(SEMICOLON);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
}

// Fragment definition - tied to expression definition.
// An expression can evaluate to our list of primitive tokens - 
// Minus Digit, Minus ID, Digit, True, False.
  static final public void fragment() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MINUS:{
      jj_consume_token(MINUS);
ASTMinus_sign jjtn001 = new ASTMinus_sign(JJTMINUS_SIGN);
               boolean jjtc001 = true;
               jjtree.openNodeScope(jjtn001);
      try {
        Identifier();
      } catch (Throwable jjte001) {
if (jjtc001) {
                 jjtree.clearNodeScope(jjtn001);
                 jjtc001 = false;
               } else {
                 jjtree.popNode();
               }
               if (jjte001 instanceof RuntimeException) {
                 {if (true) throw (RuntimeException)jjte001;}
               }
               if (jjte001 instanceof ParseException) {
                 {if (true) throw (ParseException)jjte001;}
               }
               {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                 jjtree.closeNodeScope(jjtn001, true);
               }
      }
      break;
      }
    case TRUE:{
      t = jj_consume_token(TRUE);
ASTBoolean jjtn002 = new ASTBoolean(JJTBOOLEAN);
                boolean jjtc002 = true;
                jjtree.openNodeScope(jjtn002);
      try {
jjtree.closeNodeScope(jjtn002, true);
                jjtc002 = false;
jjtn002.value = t.image;
      } finally {
if (jjtc002) {
                  jjtree.closeNodeScope(jjtn002, true);
                }
      }
      break;
      }
    case FALSE:{
      t = jj_consume_token(FALSE);
ASTBoolean jjtn003 = new ASTBoolean(JJTBOOLEAN);
                 boolean jjtc003 = true;
                 jjtree.openNodeScope(jjtn003);
      try {
jjtree.closeNodeScope(jjtn003, true);
                 jjtc003 = false;
jjtn003.value = t.image;
      } finally {
if (jjtc003) {
                   jjtree.closeNodeScope(jjtn003, true);
                 }
      }
      break;
      }
    case DIGIT:{
      Number();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/* Expression can be a simple_expression() followed by 0 or 1 more
 * Arithmetic operators and an expression.
 */
  static final public void expression() throws ParseException {Token t;
    simple_expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PLUS:
    case MINUS:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        t = jj_consume_token(PLUS);
        expression();
ASTAdd_Op jjtn001 = new ASTAdd_Op(JJTADD_OP);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
        try {
jjtree.closeNodeScope(jjtn001, true);
                              jjtc001 = false;
jjtn001.value = t.image;
        } finally {
if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001, true);
                              }
        }
        break;
        }
      case MINUS:{
        t = jj_consume_token(MINUS);
        expression();
ASTAdd_Op jjtn002 = new ASTAdd_Op(JJTADD_OP);
                                boolean jjtc002 = true;
                                jjtree.openNodeScope(jjtn002);
        try {
jjtree.closeNodeScope(jjtn002, true);
                                jjtc002 = false;
jjtn002.value = t.image;
        } finally {
if (jjtc002) {
                                  jjtree.closeNodeScope(jjtn002, true);
                                }
        }
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      ;
    }
}
